--- a/src/pages/components/cart/cart.styles.scss
+++ b/src/pages/components/cart/cart.styles.scss
@@ -20,6 +20,10 @@
             box-shadow: 0 0 1vmin black;
             border-radius: 2vmin;
             text-align: center;
+
+            &-image {
+                width: 15vmin;
+            }
         }
     }
 }
