Update README file and adding CSS

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -4,6 +4,7 @@
     box-shadow: 0 0 2vmin black;
     padding: 2vmin;
     border-radius: 0 0 2vmin 2vmin;
+    background: rgba(243, 0, 0, 0.2);
 
     .left-header {
 
