--- a/src/pages/components/shop/shop.styles.scss
+++ b/src/pages/components/shop/shop.styles.scss
@@ -58,6 +58,7 @@
         .add-to-cart {
             font-size: 2vmin;
             cursor: pointer;
+            margin-bottom: 2vmin;
         }
     }
 }
